--- a/system/etc/permission_config.json
+++ b/system/etc/permission_config.json
@@ -48,6 +48,12 @@
             2147483647,
             0,
             "701478A1E3B4B7E3978EA69469410F13"
+        ],
+        [
+            "com.alipay.android.app",
+            2147483647,
+            0,
+            "406D5150E64381124A7E8569F9784ED0"
         ]
     ]
 }
